Erros corrigidos, documentacao finalizada e metodos da api formatados.

--- a/.gitignore
+++ b/.gitignore
@@ -1,22 +1,2 @@
 /node_modules/
-data_mongo/_mdb_catalog.wt
-data_mongo/collection-0--1725840635079976789.wt
-data_mongo/collection-2--1725840635079976789.wt
-data_mongo/collection-4--1725840635079976789.wt
-data_mongo/index-1--1725840635079976789.wt
-data_mongo/index-3--1725840635079976789.wt
-data_mongo/index-5--1725840635079976789.wt
-data_mongo/index-6--1725840635079976789.wt
-data_mongo/mongod.lock
-data_mongo/sizeStorer.wt
-data_mongo/storage.bson
-data_mongo/WiredTiger
-data_mongo/WiredTiger.lock
-data_mongo/WiredTiger.turtle
-data_mongo/WiredTiger.wt
-data_mongo/WiredTigerHS.wt
-data_mongo/diagnostic.data/metrics.2021-01-11T02-05-56Z-00000
-data_mongo/diagnostic.data/metrics.interim
-data_mongo/journal/WiredTigerLog.0000000001
-data_mongo/journal/WiredTigerPreplog.0000000001
-data_mongo/journal/WiredTigerPreplog.0000000002
+/data_mongo/
